--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 80px;
-  height: 80px;
+  width: 50vh;
+  height: 50vh;
   margin: 0 0.5rem;
   border-radius: 50%;
   cursor: pointer;
