--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   border-radius: 50%;
   cursor: pointer;
   font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 2.5rem;
+  font-size: 25vh;
   text-decoration: none;
   transition: all 0.15s ease;
 }
