--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100&;
+  min-height: 70vh;
+  min-width: 70vh;
 }
 
 /* Color Variables */
