--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 70vh;
+  min-height: 100vh;
  
 }
 
@@ -22,13 +22,13 @@ body {
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 50vh;
-  height: 50vh;
+  min-width: 50vh;
+  min-height: 50vh;
   margin: 0 0.5rem;
   border-radius: 50%;
   cursor: pointer;
   font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 25vh;
+  min-font-size: 25vh;
   text-decoration: none;
   transition: all 0.15s ease;
 }
