--- a/style.css
+++ b/style.css
@@ -4,125 +4,83 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
- 
 }
 
 /* Color Variables */
-/*
-{ background: #d6249f; background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); }
-*/
+$color-codepen: #000;
+$color-github: #000000;
+$color-twitter: #2b97f1;
+$color-dribbble: #ef5a92;
+$color-instagram: #d6249f;
+
+
+
+
+$color-linkedin: #006599;
+$color-facebook: #3b5a9b;
+
 /* Social Icon Mixin */
+@mixin social-icon($color) {
+  background: $color;
+  color: #fff;
+
+  .tooltip {
+    background: $color;
+    color: currentColor;
+
+    &:after {
+      border-top-color: $color;
+    }
+  }
+}
+
 /* Social Icons */
 .social-icons {
   display: flex;
+
 }
 
 .social-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  width: 50vh;
-  height: 50vh;
+  position: relative;
+  width: 25vh;
+  height: 25vh;
   margin: 0 0.5rem;
   border-radius: 50%;
   cursor: pointer;
   font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 25vh;
+  font-size: 10vh;
   text-decoration: none;
   transition: all 0.15s ease;
-}
-.social-icon:hover {
-  color: #fff;
-}
-.social-icon:hover .tooltip {
-  visibility: visible;
-  opacity: 1;
-  transform: translate(-50%, -150%);
-}
-.social-icon:active {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5) inset;
-}
-.social-icon--linkedin {
-  background: #006599;
-  color: #fff;
-}
-.social-icon--linkedin .tooltip {
-  background: #006599;
-  color: currentColor;
-}
-.social-icon--linkedin .tooltip:after {
-  border-top-color: #006599;
-}
-.social-icon--twitter {
-  background: #2b97f1;
-  color: #fff;
-}
-.social-icon--twitter .tooltip {
-  background: #2b97f1;
-  color: currentColor;
-}
-.social-icon--twitter .tooltip:after {
-  border-top-color: #2b97f1;
-}
-.social-icon--codepen {
-  background: #000;
-  color: #fff;
-}
-.social-icon--codepen .tooltip {
-  background: #000;
-  color: currentColor;
-}
-.social-icon--codepen .tooltip:after {
-  border-top-color: #000;
-}
-.social-icon--facebook {
-  background: #3b5a9b;
-  color: #fff;
-}
-.social-icon--facebook .tooltip {
-  background: #3b5a9b;
-  color: currentColor;
-}
-.social-icon--facebook .tooltip:after {
-  border-top-color: #3b5a9b;
-}
-.social-icon--instagram {
-  background: #d6249f;
-  color: #fff;
-}
-.social-icon--instagram .tooltip {
-  background: #d6249f;
-  color: currentColor;
-}
-.social-icon--instagram .tooltip:after {
-  border-top-color: #d6249f;
-}
-.social-icon--dribbble {
-  background: #ef5a92;
-  color: #fff;
-}
-.social-icon--dribbble .tooltip {
-  background: #ef5a92;
-  color: currentColor;
-}
-.social-icon--dribbble .tooltip:after {
-  border-top-color: #ef5a92;
-}
-.social-icon--github {
-  background: #000000;
-  color: #fff;
-}
-.social-icon--github .tooltip {
-  background: #000000;
-  color: currentColor;
-}
-.social-icon--github .tooltip:after {
-  border-top-color: #000000;
-}
-.social-icon i {
-  position: relative;
-  top: 1px;
+
+  &:hover {
+    color: #fff;
+
+    .tooltip {
+      visibility: visible;
+      opacity: 1;
+      transform: translate(-50%, -150%);
+    }
+  }
+    
+  &:active {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5) inset;
+  }
+  
+  &--linkedin { @include social-icon($color-linkedin); }
+  &--twitter { @include social-icon($color-twitter); }
+  &--codepen { @include social-icon($color-codepen); }
+  &--facebook { @include social-icon($color-facebook); }
+  &--instagram { @include social-icon($color-instagram); }
+  &--dribbble { @include social-icon($color-dribbble); }
+  &--github { @include social-icon($color-github); }
+  
+  i {
+    position: relative;
+    top: 1px;
+  }
 }
 
 /* Tooltips */
@@ -141,17 +99,18 @@ body {
   transform: translate(-50%, -100%);
   transition: all 0.3s ease;
   z-index: 1;
-}
-.tooltip:after {
-  display: block;
-  position: absolute;
-  bottom: 1px;
-  left: 50%;
-  width: 0;
-  height: 0;
-  content: "";
-  border: solid;
-  border-width: 10px 10px 0 10px;
-  border-color: transparent;
-  transform: translate(-50%, 100%);
+  
+  &:after {
+    display: block;
+    position: absolute;
+    bottom: 1px;
+    left: 50%;
+    width: 0;
+    height: 0;
+    content: "";
+    border: solid;
+    border-width: 10px 10px 0 10px;
+    border-color: transparent;
+    transform: translate(-50%, 100%);
+  }
 }
