--- a/style.css
+++ b/style.css
@@ -1,153 +1,97 @@
-/* Demo */
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 500px;
+  margin: 0;
+  padding:0;
+  background: #262626;
 }
 
-/* Color Variables */
-/* Social Icon Mixin */
-/* Social Icons */
-.social-icons {
+ul {
   display: flex;
-}
-
-.social-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  width: 60px;
-  height: 60px;
-  margin: 0 0.5rem;
-  border-radius: 50%;
-  cursor: pointer;
-  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 30px;
-  text-decoration: none;
-  transition: all 0.15s ease;
-}
-.social-icon:hover {
-  color: #fff;
-}
-.social-icon:hover .tooltip {
-  visibility: visible;
-  opacity: 1;
-  transform: translate(-50%, -150%);
-}
-.social-icon:active {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.5) inset;
-}
-.social-icon--linkedin {
-  background: #006599;
-  color: #fff;
-}
-.social-icon--linkedin .tooltip {
-  background: #006599;
-  color: currentColor;
-}
-.social-icon--linkedin .tooltip:after {
-  border-top-color: #006599;
-}
-.social-icon--twitter {
-  background: #2b97f1;
-  color: #fff;
-}
-.social-icon--twitter .tooltip {
-  background: #2b97f1;
-  color: currentColor;
-}
-.social-icon--twitter .tooltip:after {
-  border-top-color: #2b97f1;
-}
-.social-icon--codepen {
-  background: #000;
-  color: #fff;
-}
-.social-icon--codepen .tooltip {
-  background: #000;
-  color: currentColor;
-}
-.social-icon--codepen .tooltip:after {
-  border-top-color: #000;
-}
-.social-icon--facebook {
-  background: #3b5a9b;
-  color: #fff;
-}
-.social-icon--facebook .tooltip {
-  background: #3b5a9b;
-  color: currentColor;
-}
-.social-icon--facebook .tooltip:after {
-  border-top-color: #3b5a9b;
-}
-.social-icon--instagram {
-  background: #d6249f;
-  color: #fff;
-}
-.social-icon--instagram .tooltip {
-  background: #d6249f;
-  color: currentColor;
-}
-.social-icon--instagram .tooltip:after {
-  border-top-color: #d6249f;
-}
-.social-icon--dribbble {
-  background: #ef5a92;
-  color: #fff;
-}
-.social-icon--dribbble .tooltip {
-  background: #ef5a92;
-  color: currentColor;
-}
-.social-icon--dribbble .tooltip:after {
-  border-top-color: #ef5a92;
-}
-.social-icon--github {
-  background: #000000;
-  color: #fff;
-}
-.social-icon--github .tooltip {
-  background: #000000;
-  color: currentColor;
-}
-.social-icon--github .tooltip:after {
-  border-top-color: #000000;
-}
-.social-icon i {
-  position: relative;
-  top: 1px;
-}
-
-/* Tooltips */
-.tooltip {
-  display: block;
   position: absolute;
-  top: 0;
+  top: 50%;
   left: 50%;
-  padding: 0.8rem 1rem;
-  border-radius: 40px;
-  font-size: 0.8rem;
-  font-weight: bold;
-  opacity: 0;
-  pointer-events: none;
-  text-transform: uppercase;
-  transform: translate(-50%, -100%);
-  transition: all 0.3s ease;
+  transform: translate(-50%, -50%);
+}
+
+ul li {
+  list-style: none;
+}
+
+ul li a {
+  width: 80px;
+  height: 80px;
+  background-color: #fff;
+  text-align: center;
+  line-height: 80px;
+  font-size: 35px;
+  margin: 0 10px;
+  display: block;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+  border: 3px solid #fff;
   z-index: 1;
 }
-.tooltip:after {
-  display: block;
-  position: absolute;
-  bottom: 1px;
-  left: 50%;
-  width: 0;
-  height: 0;
+
+ul li a .icon {
+  position: relative;
+  color: #262626;
+  transition: .5s;
+  z-index: 3;
+}
+
+ul li a:hover .icon {
+  color: #fff;
+  transform: rotateY(360deg);
+}
+
+ul li a:before {
   content: "";
-  border: solid;
-  border-width: 10px 10px 0 10px;
-  border-color: transparent;
-  transform: translate(-50%, 100%);
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #f00;
+  transition: .5s;
+  z-index: 2;
+}
+
+ul li a:hover:before {
+  top: 0;
+}
+
+ul li:nth-child(1) a:before{
+  background: #0e76a8;
+}
+
+ul li:nth-child(2) a:before{
+  background: #f09433; 
+background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+  }
+
+
+ul li:nth-child(3) a:before {
+  background: #00acee;
+}
+
+ul li:nth-child(4) a:before {
+  background: #211F1F;
+}
+
+ul li:nth-child(5) a:before {
+  background: #00d0af;
+}
+ul li:nth-child(6) a:before {
+  background: #000000;
+}
+
+ul li:nth-child(7) a:before {
+  background: #000000;
+}
+
+ul li:nth-child(8) a:before {
+  background: #f3ce13;
 }
