--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  padding:0;
+  padding:10px;
   background: #262626;
 }
 
 ul {
   display: flex;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
