--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
-  margin: 0;
+  display: flex;
   align-items: center;
-  background: #262626;
+  justify-content: center;
+	background: #262626;
+  height: 500px;
 }
 
 ul {
