--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding:0;
-  background: #262626
+  background: #262626;
   font-family: 'Abril Fatface';
   line-height: 1.2;
 }
