--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding:0;
   background: #262626;
-  font-family: 'Abril Fatface';
-  line-height: 1.2;
+ /* font-family: 'Abril Fatface';
+  line-height: 1.2; */
 }
 
 p {
