--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
+
 }
 
 ul li {
