--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ p {
 }
 
 ul {
-  display: flex;
+  column-count: 2;
+  column-rule: none;
+display: flex;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -35,7 +37,7 @@ ul li a {
   background-color: #fff;
   text-align: center;
   line-height: 80px;
-  font-size: 35px;
+  font-size: 30px;
   margin: 0 10px;
   display: block;
   border-radius: 50%;
