--- a/style.css
+++ b/style.css
@@ -1,7 +1,43 @@
+.container {
+  list-style:none;
+  margin: 0;
+  padding: 0;
+}
+.item {
+  /background: tomato;
+ / padding: 5px;
+ / width: 200px;
+ / height: 150px;
+/  margin: 10px;
+  
+/  line-height: 150px;
+ / color: white;
+/  font-weight: bold;
+  font-size: 3em;
+  text-align: center;
+}
+
+.float {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.float:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.float-item {
+  float: left;
+}
+
 body {
   margin: 0;
   padding:0;
   background: #262626;
+  font-family: 'Abril Fatface';
+  line-height: 1.2;
 }
 
 p {
@@ -13,14 +49,15 @@ p {
    */
 }
 
+
 ul {
-  column-count: 2;
-  column-rule: none;
-display: flex;
+
+ display: flex;
   position: absolute;
   top: 50%;
-  left: 50%;
+ left: 50%;
   transform: translate(-50%, -50%);
+}
 
 ul li {
   list-style: none;
@@ -32,7 +69,7 @@ ul li a {
   background-color: #fff;
   text-align: center;
   line-height: 80px;
-  font-size: 35px;
+  font-size: 40px;
   margin: 0 10px;
   display: block;
   border-radius: 50%;
@@ -99,9 +136,8 @@ ul li:nth-child(6) a:before {
 }
 
 ul li:nth-child(7) a:before {
-  background: #FF5700 
-    }
-
+  background: #FF5700;
+}
 
 ul li:nth-child(8) a:before {
   background: #f3ce13;
