--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
   padding: 0;
 }
 .item {
-  /background: tomato;
- / padding: 5px;
- / width: 200px;
- / height: 150px;
-/  margin: 10px;
+  background: #262626;
+  padding: 5px;
+  width: 200px;
+  height: 150px;
+  margin: 30px;
   
-/  line-height: 150px;
+  line-height: 150px;
  / color: white;
-/  font-weight: bold;
+  font-weight: bold;
   font-size: 3em;
   text-align: center;
 }
@@ -29,12 +29,12 @@
   visibility: hidden;
 }
 .float-item {
-  float: left;
+  float:left;
 }
 
 body {
   margin: 0;
-  padding:0;
+  padding:30px;
   background: #262626;
   font-family: 'Abril Fatface';
   line-height: 1.2;
@@ -50,13 +50,18 @@ p {
 }
 
 
-ul {
 
- display: flex;
-  position: absolute;
-  top: 50%;
- left: 50%;
-  transform: translate(-50%, -50%);
+ul{
+    list-style-type: none;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+    columns:initial;
+    list-style-position: inside;//this is important addition
+ display:flex;
+  position:relative;
+   top: auto;
+ left: auto;
+  transform:scale;
 }
 
 ul li {
@@ -64,12 +69,12 @@ ul li {
 }
 
 ul li a {
-  width: 80px;
-  height: 80px;
+  width: 90px;
+  height: 90px;
   background-color: #fff;
   text-align: center;
-  line-height: 80px;
-  font-size: 40px;
+  line-height: 90px;
+  font-size: 45px;
   margin: 0 10px;
   display: block;
   border-radius: 50%;
