--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 .item {
   background: #262626;
   padding: 5px;
-  width: 200px;
-  height: 150px;
-  margin: 30px;
+  width:auto;
+  height:auto;
+  margin:auto;
   
-  line-height: 150px;
+  line-height:auto;
  / color: white;
   font-weight: bold;
   font-size: 3em;
