--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .content {
   max-width: 100%;
-  margin: auto;
+  margin: 20px;
 }
 
 
@@ -15,7 +15,7 @@
   padding: 5px;
   width:auto;
   height:auto;
-  margin:auto;
+  margin:5px;
   
   line-height:auto;
  / color: white;
