--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 .item {
   background: #262626;
   padding: 5%;
-  width:100%;
-  height:100%;
+     width: fit-content;
+    height: fit-content;
   margin:5px;
   
 
@@ -20,7 +20,7 @@
 
 .float {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: auto;
 }
 .float:after {
   content: ".";
