--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 .container {
   list-style:none;
-  margin-left:inherit;
-  margin-right:inherit;
+  margin-left:auto;
+  margin-right:auto;
   padding: 10%;
 }
 .item {
@@ -35,7 +35,7 @@
   visibility: hidden;
 }
 .float-item {
-  float:left;
+  float:none;
 }
 
 
