--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
 }
 
 .container {
+	display: flex;
+	flex-flow: row wrap;
+	  justify-content: space-around;
   list-style:none;
-  margin-left:auto;
-  margin-right:auto;
+ 
   padding: 10%;
 }
 .item {
