--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container {
 	display: flex;
 	flex-flow: row wrap;
-	  justify-content: center;
+	  justify-content: space-around;
   list-style:none;
  
   padding: 10%;
