--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 .content {
 	display: flex;
   	align-items: center;
-  	justify-content: center;
+  	justify-content: space-evenly;
 }
 
 .container {
 	display: flex;
-	flex-flow: row wrap;
-	  justify-content: space-around;
+	flex-flow: row;
   list-style:none;
  
-  padding: 10%;
 }
 .item {
   background: #262626;
