--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
 body {
   
    	display: flex;
+	flex-flow: row;
   	align-items: center;
   	justify-content: center;
 	background: #262626;
@@ -85,12 +86,12 @@ ul li {
 }
 
 ul li a {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   background-color: #fff;
   text-align: center;
-  line-height: 100px;
-  font-size: 55px;
+  line-height: 120px;
+  font-size: 65px;
   margin: 0 10px;
   display: block;
   border-radius: 50%;
