--- a/style.css
+++ b/style.css
@@ -5,6 +5,23 @@
   	justify-content: center;
 }*/
 
+
+#container > div {
+  display: flex;
+  font-family: Courier New, Lucida Console, monospace;
+}
+
+#container > div > div {
+  width: 50px;
+  height: 50px;
+  background: linear-gradient(-45deg, #788cff, #b4c8ff);
+}
+
+
+#center {
+  justify-content: center;
+}
+
 .container {
 	display: flex;
 	flex-flow: row;
