--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
   	margin:1%;
   
 
-  font-weight: bold;
+ /* font-weight: bold; */
   font-size: 3em;
 
 }
@@ -75,7 +75,10 @@ body {
 }
 
 
-  
+
+
+/*
+
 p {
   margin: calc(4vw + 4vh + 2vmin);
   font-size: calc(4vw + 4vh + 2vmin);
@@ -84,6 +87,7 @@ p {
    * For some math behind this
    */
 }
+
 
 
 
@@ -102,12 +106,12 @@ ul li {
 }
 
 ul li a {
-  width: 120px;
-  height: 120px;
+  width: 110px;
+  height: 110px;
   background-color: #fff;
   text-align: center;
-  line-height: 120px;
-  font-size: 65px;
+  line-height: 110px;
+  font-size: 60px;
   margin: 0 10px;
   display: block;
   border-radius: 50%;
